examples/test/testpolicy199.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy199
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key25: value25
      key7: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value40
          key26: value31
      podSelector:
        matchLabels:
          key6: value26
          key40: value43
          key21: value44
